[package]
name = "roast"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["archds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt-notification = "0.5.1"
humansize = "1.1.1"
home = "0.5.3"
fs_extra = "1.2.0"
rust-ini = "0.18"
fstrings = "0.2.3"

[build-dependencies]
winres = "0.1.12"


[dev-dependencies]
